--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@ header1{display: flex; width:100%;}
 </section>
 
 <section id="section2">
-<center><font size="4"><b>CapCut</b></font><br> 
-<font size="2" color="green"><b>CapCut es una aplicación de edición de video todo en uno gratuita</b></font>
+<center><font size="4"><b>Max Star</b></font><br> 
+<font size="2" color="green"><b>Es una app donde puedes ver películas sin anuncios molestos y gratis </b></font>
 <br> <font size="2">Verificado por <b>Virus Total</b></font><br>
-<font size="2"><b>Versión:  8.6.0(8601600)<br>
-Tamaño:  68.06 MB</b></font></center>
+<font size="2"><b>Versión:  1.0.7(7)<br>
+Tamaño:  17.00 MB</b></font></center>
 </section>
   
 </div>
@@ -140,29 +140,19 @@ download="CapCut_Android life " ><center>Descargar</center></a>
 <section id="section6">
 <img src="5.jpg">
 </section>
+<section id="section6">
+<img src="6.jpg">
+</section>
+<section id="section6">
+<img src="7.jpg">
+</section>
 </div>
 
 <div class="footer">
 <pre>
 <h2>  Descripción:</h2>
-</pre><br><p>Captura el momento y corta
-<br><br>
-CapCut es una aplicación de edición de video todo en uno gratuita, que te ayuda a crear videos increíbles.
-<br><br>
-「Fácil de usar」
-Corta, retrocede y cambia la velocidad: hacerlo bien es más fácil que nunca, publicando sólo tus mejores momentos.
-<br><br>
-「Alta calidad」
-Los filtros avanzados y los efectos de belleza abren un mundo nuevo de posibilidades
-<br><br>
-「Top Music Hits / Suena increíble」
-Gran biblioteca musical y canciones con derechos de autor exclusivas
-<br><br>
-「Pegatinas y texto」
-Stickers y fuentes en tendencia que te permitirán expresarte en tus videos
-<br><br>
- 「Efecto」
-Explora tu creatividad con una variedad de efectos mágicos
+</pre><br><p>
+Es una app donde puedes ver películas sin anuncios molestos y gratis
 </p>
 </div>
   
@@ -180,7 +170,7 @@ Explora tu creatividad con una variedad de efectos mágicos
 </div>
 </div>
 <div class="nombre1">
-Bytedance Pte. Ltd
+K Dev Studio and K.S Corp
 </div>
 </header1>
 
@@ -191,31 +181,20 @@ Bytedance Pte. Ltd
 </div>
 </div>
 <div class="nombre1">
-capcut.support@bytedance.com
+kdevstudio.bussines@gmail.com
 </div>
 </header1>
 
 <header1>
 <div class="logo1">
 <div class="log1">
-<a href="  https://sf16-draftcdn-sg.ibytedtos.com/obj/ies-hotsoon-draft-sg/capcut/via_clause_privacy_policy_en.html "><img src= "privacidad.png" ></a>
+<a href=" http://starplays.site/Pol%C3%ADticas%20De%20Privacidad%20Max%20Star.html "><img src= "privacidad.png" ></a>
 </div>
 </div>
 <div class="nombre1">
 Politica de privacidad 
 </div>
 </header1>
-
-<header1>
-<div class="logo1">
-<div class="log1">
-<a href="https://www.capcut.com/es-es/ "><img src="web.jpg " ></a>
-</div>
-</div>
-<div class="nombre1">
-Web
-</div>
-</header1> 
 
   
 <div id="comentarios"></div>
