--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@ Tamaño:  17.00 MB</b></font></center>
 download="Max Star Android life " ><center>Descargar</center></a>
 </div>
   
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="tcSwNufk"></script>
   
 <section id="section03">
 <div id="section08">
@@ -156,7 +157,6 @@ Es una app donde puedes ver películas sin anuncios molestos y gratis
 </p>
 </div>
   
-
 
 <div class="footer">
 <p><pre>
@@ -198,7 +198,7 @@ Politica de privacidad
 
   
 <div id="comentarios"></div>
-
+<div class="fb-comments" data-href="https://developer-shop.github.io/Max-Star/#comentarios" data-width="100" data-numposts="5"></div>
   
  <script type="text/javascript">(function(d, t, e, m){
     
